style: cleanup overflow issues

--- a/demo/docs/assets/custom.css
+++ b/demo/docs/assets/custom.css
@@ -3,8 +3,12 @@ html:has(.mdbook-proto) {
 }
 
 .mdbook-proto {
+    .deprecated:after {
+        content: "[deprecated]";
+        font-family: monospace;
+    }
     .deprecated {
-        text-decoration: line-through;
+        color: var(--sidebar-non-existant);
     }
 
     > label {
@@ -16,12 +20,14 @@ html:has(.mdbook-proto) {
 
     position: relative;
 
+    min-inline-size: auto; /* prevent fieldset styling making container grow with children */
+
     fieldset {
         border: none;
     }
 
     fieldset:target {
-        border-width: 2px;
+        border-width: 3px;
         border-color: var(--sidebar-fg);
     }
 
@@ -40,6 +46,7 @@ html:has(.mdbook-proto) {
         + .comment {
             margin-top: 1rem;
         }
+
     }
 
     .message, .enum, .method {
@@ -75,6 +82,16 @@ html:has(.mdbook-proto) {
         content: "enum";
     }
 
+    .method>label:before,
+    .service>label:before,
+    .oneof>label:before,
+    .message>label:before,
+    .enum>label:before,
+    .keyword {
+        font-size: smaller;
+        font-family: monospace;
+    }
+
     .enum ul {
         list-style-type: none;
         padding: 0;
@@ -88,10 +105,6 @@ html:has(.mdbook-proto) {
 
     .service {
         padding-left: 0;
-    }
-
-    .keyword {
-        font-style: italic;
     }
 
     .backlinks {
@@ -135,6 +148,7 @@ html:has(.mdbook-proto) {
             border: 1px solid var(--sidebar-non-existant);
             border-radius: 5px;
             padding: 5px;
+            font-family: monospace;
 
             .optional {
                 font-style: italic;
